# hpsg

./: Common.hs  LICENSE  Main.hs  README.md  Test.hs  hpsg.cabal
NLP/: AVM.hs  HPSG.hs
NLP/AVM/: Test.hs
NLP/HPSG/: AVM.hs  FS.hs  Grammar.hs  GrammarCFG.hs  Parse.hs  ParseCFG.hs  Templates.hs  UG.hs  UG_CFG.hs
NLP/UG/: Grammar.hs  GrammarCFG.hs  Parse.hs  ParseCFG.hs
examples/: KarelOliva.prolog  grammar1.hs
src/NLP/HPSG/: FS.hs
