name:               hpsg
version:            0.1
synopsis:           HPSG: Head-Driven Phrase Structure Grammar
description:        An implementation of Head-Driven Phrase Structure Grammar
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 Jakub Waszczuk
author:             Jakub Waszczuk, John J. Camilleri
maintainer:         john@johnjcamilleri.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/johnjcamilleri/hpsg
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base            >= 4        && < 5
      , containers      >= 0.4      && < 0.5

    exposed-modules:
        NLP.HPSG

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/johnjcamilleri/hpsg.git
